--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -30,3 +30,6 @@ p {
 .font__white {
 	color: #FFF;
 }
+a {
+	text-decoration:none;
+}
